--- a/Makefile.inc
+++ b/Makefile.inc
@@ -6,7 +6,7 @@ VERSION=1.0.14
 
 
 CURRENT_PATH := $(dir $(lastword $(MAKEFILE_LIST)))
-LIB_PATH_GENERAL ?=../libStatGen
+LIB_PATH_GENERAL ?=./libStatGen
 LIB_PATH_BAM_UTIL ?= $(LIB_PATH_GENERAL)
 
 # add any additional ../ as necessary if it is a relative path
@@ -24,11 +24,4 @@ endif
 $(INCLUDE_MAKE):
 	@echo Unable to locate: $(INCLUDE_MAKE)
 	@echo To change the location, set LIB_PATH_GENERAL or LIB_PATH_BAM_UTIL to the appropriate path to libStatGen.  Or specify \"make LIB_PATH_GENERAL=yourPath\" or \"make LIB_PATH_BAM_UTIL=yourPath\"
-	@echo Use make cloneLib if you have git and want to clone the current libStatGen at that location.
-
-cloneLib:
-	@if test -d $(LIB_PATH_BAM_UTIL); \
-	then echo $(LIB_PATH_BAM_UTIL) already exists; \
-	else git clone git://github.com/statgen/libStatGen.git $(LIB_PATH_BAM_UTIL); fi
-	@echo Call make to compile libStatGen and this tool.
 
